@@ -1,7 +1,7 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.3.0'
-	id 'io.spring.dependency-management' version '1.1.5'
+	id 'org.springframework.boot' version '3.4.1'
+	id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'com.rfrmd'
@@ -39,4 +39,10 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	jvmArgs '-XX:+EnableDynamicAgentLoading'
+	jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+	jvmArgs '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED'
+	systemProperty 'net.bytebuddy.experimental', 'true'
 }
+
+ext['mockito.version'] = '5.20.0'
